k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-config-volumns
          configMap:
            defaultMode: 420
            name: nginx-configmap
      containers:
        - name: nginx
          image: lwenjim/nginx:test
          volumeMounts:
            - mountPath: /data/nginx-bin/conf/nginx.conf
              name: nginx-config-volumns
              subPath: nginx.conf
          ports:
            - containerPort: 80
        - name: php
          image: lwenjim/php:test
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: "a.bar.com"
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            pathType: Prefix
            path: "/"
